# tauri-dustdesk

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  start-desktop.bat  vite.config.ts
.github/workflows/: release-windows.yml
scripts/: build-desktop-debug.ps1  build.ps1  dev.ps1  run-desktop.ps1  start-desktop.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_bridge.rs  main.rs  models.rs  store.rs  system_icon.rs
src/app/: router.tsx
src/components/: app-error-boundary.tsx
src/components/dustdesk/: empty-state.tsx  file-icon.tsx  item-context-menu.tsx  launch-confirm-button.tsx
src/components/ui/: alert-dialog.tsx
src/config/: navigation.ts
src/hooks/: use-persist-current-window-layout.ts  use-theme.ts
src/layouts/: app-shell.tsx
src/lib/: dustdesk-dnd.ts  tauri-window.ts  utils.ts
src/pages/: clipboard-overlay-page.tsx  clipboard-page.tsx  desktop-card-window-page.tsx  desktop-widget-page.tsx  home-page.tsx  launcher-page.tsx  organizer-page.tsx  search-overlay-page.tsx  search-page.tsx  settings-page.tsx
src/stores/: dustdesk-store.ts
